# FixedSizePoints

./: CMakeLists.txt  LICENSE  PointCloud.wgsl  README.md  ShaderLoader.cpp  ShaderLoader.h  main.cpp
glfw3webgpu/: CMakeLists.txt
